Styles a little, adds images and fonts

--- a/src/Assets/Styles/main.scss
+++ b/src/Assets/Styles/main.scss
@@ -1,5 +1,8 @@
-@import "./navMenu";
+@import "./typography";
 
-h1 {
-    color: blue;
-}
+@import "./header";
+@import "./body";
+@import "./media";
+
+
+
