--- a/src/Assets/Styles/_header.scss
+++ b/src/Assets/Styles/_header.scss
@@ -1,38 +1,60 @@
 header {
-    margin: 1rem 2%;
     padding: 0;
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: center;
-    column-gap: 6rem;
+    width: 100%;
+    margin: 0;
+    background-size: cover;
+    background-position-y: -110px ;
+    background-image: url(../Pictures/PXL_20220829_162705195.PANO.jpg);
+    background-color: rgba(200,200,200,0.7);
+    background-blend-mode: soft-light;
 
-    @include sizeDesktop {
-        justify-content: space-between;
-        max-width: 1200px;
-        margin: 1rem auto;
-    }
+    .navMenuWrapper {
+        background-color: rgba(50,50,50,0.7);
+        width: 100%;
+        margin: 0;
+        border-bottom: 1px solid rgba(50,50,50);
 
-    .headerMenu {
-        ul {
+        .navMenus {
+            margin: 1rem 2%;
+            padding: 0 1rem;
+            border-radius: 8px;
             display: flex;
-            flex-flow: row nowrap;
-            gap: 2rem;
-            padding: 0;
-            margin: 0.5rem 0;
+            flex-flow: row wrap;
+            justify-content: center;
+            column-gap: 6rem;
 
-            li {
+            @include sizeDesktop {
+                justify-content: space-between;
+                max-width: 1200px;
+                margin: auto;
+            }
 
-                //change place?
-                font-size: 0.75rem;
+            .headerMenu {
+                ul {
+                    display: flex;
+                    flex-flow: row nowrap;
+                    gap: 2rem;
+                    padding: 0;
+                    margin: 0.5rem 0;
 
-                list-style: none;
+                    li {
+                        //change place?
+                        font-size: 0.75rem;
 
-                @include sizeTablet {
-                    font-size: 1rem;
+                        list-style: none;
+
+                        @include sizeTablet {
+                            font-size: 1rem;
+                        }
+                    }
                 }
-
             }
         }
     }
 
+    .home {
+        text-align: center;
+        color: black;
+        padding: 5rem;
+    }
 }
