--- a/src/Assets/Styles/main.scss
+++ b/src/Assets/Styles/main.scss
@@ -6,8 +6,4 @@
 @import "./header";
 @import "./body";
 @import "./media";
-@import "./navigation"
-//@import "./singleProject";
-
-
-
+@import "./navigation";
