--- a/src/Assets/Styles/_variables.scss
+++ b/src/Assets/Styles/_variables.scss
@@ -1,5 +1,9 @@
 $color-main-light: white;
 $color-main-dark: black;
 
-$color-bg-light: rgba(50,50,50,0.75);
-$color-bg-dark: rgba(50,50,50,0.75);
+$color-secondary-light: rgba(200,200,200,1);
+$color-secondary-dark: rgba(35,35,35,1);
+
+$color-bg-light: rgba(200,200,200,0.8);
+$color-bg-dark: rgba(50,50,50,1);
+$color-bg-dark-transparent: rgba(50,50,50,0.9);
