--- a/src/Assets/Styles/_header.scss
+++ b/src/Assets/Styles/_header.scss
@@ -3,16 +3,18 @@ header {
     width: 100%;
     margin: 0;
     background-size: cover;
-    background-position-y: -110px ;
+    background-position-y: calc(50%) ;
     background-image: url(../Pictures/PXL_20220829_162705195.PANO.jpg);
-    background-color: rgba(200,200,200,0.7);
+    background-color: $color-bg-dark;
     background-blend-mode: soft-light;
 
     .navMenuWrapper {
-        background-color: rgba(50,50,50,0.7);
+        position: fixed;
+        background-color: $color-bg-dark-transparent;
         width: 100%;
         margin: 0;
-        border-bottom: 1px solid rgba(50,50,50);
+        height: 3.5rem;
+        border-bottom: 1px solid $color-bg-dark;
 
         .navMenus {
             margin: 1rem 2%;
@@ -35,7 +37,7 @@ header {
                     flex-flow: row nowrap;
                     gap: 2rem;
                     padding: 0;
-                    margin: 0.5rem 0;
+                    margin: 1rem 0;
 
                     li {
                         //change place?
@@ -54,7 +56,15 @@ header {
 
     .home {
         text-align: center;
-        color: black;
-        padding: 5rem;
+        padding: 14rem 0 10rem 0;
+
+        h1 {
+            color: $color-main-light;
+        }
+
+        h2 {
+            margin-top: 1rem;
+            color: $color-secondary-light;
+        }
     }
 }
