--- a/src/Assets/Styles/_variables.scss
+++ b/src/Assets/Styles/_variables.scss
@@ -5,5 +5,8 @@ $color-secondary-light: rgba(200,200,200,1);
 $color-secondary-dark: rgba(35,35,35,1);
 
 $color-bg-light: rgba(200,200,200,0.8);
+$color-bg-lighter: #f5f5f5;
 $color-bg-dark: rgba(50,50,50,1);
 $color-bg-dark-transparent: rgba(50,50,50,0.9);
+
+$color-accent: rgb(53, 205, 232);
