--- a/src/Assets/Styles/_body.scss
+++ b/src/Assets/Styles/_body.scss
@@ -1,16 +1,13 @@
-section {
-    padding: 3rem 0;
+section, .aboutMe {
+    padding: 3rem 0 4rem 0;
 }
 
 .aboutMe {
-    padding: 3rem 0;
-
     p {
         margin: 0 auto;
         max-width: 800px;
     }
 }
-
 
 .projectsWrapper {
     background-color: $color-bg-lighter;
@@ -24,35 +21,52 @@ section {
                 max-width: 800px;
                 display: grid;
                 grid-template-columns: 1fr 1fr 1fr;
-                gap: 1rem;
+                gap: 1.5rem;
     
                 .singleProject {
-    
-                    .imageContainer {
-                        position: relative;
-                        
-                        img {
-                            display: block;
+                    display: flex;
+                    flex-flow: column nowrap;
+                    justify-content: space-between;
+
+                    .imageDescriptionWrapper {
+                        padding-bottom: 1rem;
+
+                        .imageContainer {
+                            position: relative;
+                            overflow: hidden;
+                            max-height: 300px;
+                            
+                            img {
+                                display: block;
+                            }
+                            
+                            .titleContainer {
+                                box-sizing: border-box;
+                                position: absolute;
+                                bottom: 0;
+                                left: 0;
+                                right: 0;
+                                color: $color-main-light;
+                                background-color: $color-bg-dark-transparent;
+                                padding: 1rem;
+                            }
                         }
-                        
-                        .titleContainer {
-                            box-sizing: border-box;
-                            position: absolute;
-                            bottom: 0;
-                            left: 0;
-                            right: 0;
-                            color: $color-main-light;
-                            background-color: $color-bg-dark-transparent;
-                            padding: 1rem;
+                    
+                        p {
+                            padding: 1rem 0;
                         }
-                
                     }
+
+                    button {
+                        align-self: center;
+                        width: 250px;
+                    };
                 }
             }
     
             @include sizeDesktop {
                 max-width: 1200px;
-    
+
                 //change place!
                 img {
                 justify-self: right;
@@ -60,4 +74,11 @@ section {
             }
         }
     }
+}
+
+.contact {
+    padding: 4rem 0;
+    //border-top: 2px solid rgba($color-accent, 0.5);
+    //background-image: linear-gradient(180deg, $color-accent 2%, $color-bg-dark 10%);
+    background-color: $color-bg-dark;
 }
