--- a/src/Assets/Styles/_navigation.scss
+++ b/src/Assets/Styles/_navigation.scss
@@ -1,14 +1,86 @@
-.headerMenu {
+.headerMenu, .contact .upperList , .contact .upperList .contactSocial .headerMenu {
     a, p {
-        color: white;
+        color: $color-main-light;
         transition: color 0.25s;
     }
 
     a:hover {
-        color: $color-accent;
+        color: rgb(152, 201, 230);
+
+        p {
+            color: $color-accent;
+        }
     }
 
     .icon {
         font-size: 1.2rem;
+    }
+
+    .resumeDownload {
+        background-color: $color-accent;
+        border-radius: 6px;
+        padding: 0.25rem 0.6rem;
+        //border: 1px solid rgba($color-accent, 0.6);
+    }
+}
+
+.contact {
+
+    .upperList {
+        max-width: 1200px;
+        margin: 0 auto;
+        display: flex;
+        flex-flow: row wrap;
+        justify-content: space-between;
+        align-items: center;
+
+        .phone, .mail, .contactSocial {
+            flex-basis: 45%;
+            list-style-type: none;
+            min-width: 100px;
+
+            a {
+                display: flex;
+                flex-flow: row nowrap;
+                justify-content: center;
+                align-items: center;
+                gap: 1rem;
+
+                p {
+                    font-size: 1.25rem;
+                }
+            }
+        }
+
+        .contactSocial {
+            .headerMenu {
+                .icon {
+                    font-size: 1.5rem;
+                }
+
+                ul {
+                    display: flex;
+                    flex-flow: row nowrap;
+                    justify-content: center;
+                    align-items: center;
+                    gap: 2rem;
+                    padding: 0;
+                    margin: 1rem 0;
+
+                    li {
+                        list-style-type: none;
+                        //change place?
+                        font-size: 0.75rem;
+
+                        list-style: none;
+
+
+                        @include sizeTablet {
+                            font-size: 1rem;
+                        }
+                    }
+                }
+            }
+        }
     }
 }
