--- a/src/Assets/Styles/_header.scss
+++ b/src/Assets/Styles/_header.scss
@@ -57,7 +57,7 @@ header {
 
     .home {
         text-align: center;
-        padding: 14rem 0 10rem 0;
+        padding: 14rem 0 8.5rem 0;
 
         h1 {
             color: $color-main-light;
@@ -67,6 +67,22 @@ header {
             margin-top: 1rem;
             padding-bottom: 0;
             color: $color-secondary-light;
+        }
+
+        .skills {
+            display: flex;
+            justify-content: center;
+            gap: 2rem;
+            margin: 0 auto;
+            margin-top: 1.5rem;
+            color: $color-secondary-light;
+
+            div {
+                display: flex;
+                flex-flow: row nowrap;
+                gap: .5rem;
+            }
+
         }
     }
 }
