--- a/src/Assets/Styles/_typography.scss
+++ b/src/Assets/Styles/_typography.scss
@@ -18,7 +18,6 @@ h2 {
     font-size: 1.75rem;
     text-align: center;
     padding-bottom: 2rem;
-    //color: $color-secondary-dark;
 }
 
 h3 {
@@ -35,7 +34,7 @@ p, a {
     }
 }
 
-button {
+a.readMore {
     font-family: $font-sans;
 
     text-align: center;
