Changes AdventureBC description and 'learn more' buttons style

--- a/src/Assets/Styles/_body.scss
+++ b/src/Assets/Styles/_body.scss
@@ -69,7 +69,9 @@ section, .aboutMe {
 
                         .readMore {
                             align-self: center;
-                            width: 250px;
+                            width: 100%;
+                            font-size: 1rem;
+                            padding: 0.5rem 0;
                         };
                     }
 
