--- a/src/Assets/Styles/_navigation.scss
+++ b/src/Assets/Styles/_navigation.scss
@@ -13,7 +13,11 @@
     }
 
     .icon {
-        font-size: 1.2rem;
+        font-size: 1rem;
+
+        @include sizeTablet {
+            font-size: 1.2rem;
+        }
     }
 
     .resumeDownload {
@@ -27,12 +31,19 @@
 .contact {
 
     .upperList {
-        max-width: 1200px;
-        margin: 0 auto;
-        display: flex;
-        flex-flow: row wrap;
-        justify-content: space-between;
-        align-items: center;
+        display: block;
+
+
+        @include sizeDesktop {
+            max-width: 1200px;
+            margin: 0 auto;
+            display: flex;
+            flex-flow: row wrap;
+            justify-content: space-between;
+            align-items: center;
+
+        }
+
 
         .phone, .mail, .contactSocial {
             flex-basis: 45%;
@@ -47,7 +58,11 @@
                 gap: 1rem;
 
                 p {
-                    font-size: 1.25rem;
+                    font-size: 1rem;
+
+                    @include sizeTablet {
+                        font-size: 1.25rem;
+                    }
                 }
             }
         }
@@ -55,7 +70,11 @@
         .contactSocial {
             .headerMenu {
                 .icon {
-                    font-size: 1.5rem;
+                    font-size: 1.2rem;
+
+                    @include sizeTablet {
+                        font-size: 1.5rem;
+                    }
                 }
 
                 ul {
