--- a/src/Assets/Styles/_body.scss
+++ b/src/Assets/Styles/_body.scss
@@ -1,11 +1,12 @@
 section, .aboutMe {
-    padding: 3rem 0 4rem 0;
+    padding: 3rem 1rem 4rem 1rem;
 }
 
 .aboutMe {
     p {
         margin: 0 auto;
         max-width: 800px;
+        text-align: justify;
     }
 }
 
@@ -15,71 +16,74 @@ section, .aboutMe {
     .projects {
     
         .projectItems {
+            display: block;            
+
+            .singleProject {
+                display: flex;
+                flex-flow: column nowrap;
+                justify-content: space-between;
+                margin-bottom: 4rem;
+
+                .imageDescriptionWrapper {
+                    padding-bottom: 1rem;
+
+                    .imageContainer {
+                        position: relative;
+                        overflow: hidden;
+                        max-height: 300px;
+                        
+                        img {
+                            display: block;
+                        }
+                        
+                        .titleContainer {
+                            box-sizing: border-box;
+                            position: absolute;
+                            bottom: 0;
+                            left: 0;
+                            right: 0;
+                            color: $color-main-light;
+                            background-color: $color-bg-dark-transparent;
+                            padding: 1rem;
+                        }
+                    }
+                    
+                    p {
+                        padding: 1rem 0 0.5rem 0;
+                    }   
+                }
+
+                .stack {
+                    padding-bottom: 1rem;
+                    color: $color-secondary-dark;
+                    font-size: 0.9rem;
+                }
+                
+                div {
+                    display: flex;
+                    flex-flow: column nowrap;
+
+                    .readMore {
+                        align-self: center;
+                        width: 100%;
+                        font-size: 1rem;
+                        padding: 0.5rem 0;
+                    };
+                }
+
+            }
     
             @include sizeTablet {
                 margin: 0 auto;
                 max-width: 800px;
                 display: grid;
-                grid-template-columns: 1fr 1fr 1fr;
+                grid-template-columns: 1fr 1fr;
                 gap: 2rem;
-    
-                .singleProject {
-                    display: flex;
-                    flex-flow: column nowrap;
-                    justify-content: space-between;
-
-                    .imageDescriptionWrapper {
-                        padding-bottom: 1rem;
-
-                        .imageContainer {
-                            position: relative;
-                            overflow: hidden;
-                            max-height: 300px;
-                            
-                            img {
-                                display: block;
-                            }
-                            
-                            .titleContainer {
-                                box-sizing: border-box;
-                                position: absolute;
-                                bottom: 0;
-                                left: 0;
-                                right: 0;
-                                color: $color-main-light;
-                                background-color: $color-bg-dark-transparent;
-                                padding: 1rem;
-                            }
-                        }
-                        
-                        p {
-                            padding: 1rem 0 0.5rem 0;
-                        }   
-                    }
-
-                    .stack {
-                        padding-bottom: 1rem;
-                        color: $color-secondary-dark;
-                        font-size: 0.9rem;
-                    }
-                    
-                    div {
-                        display: flex;
-                        flex-flow: column nowrap;
-
-                        .readMore {
-                            align-self: center;
-                            width: 100%;
-                            font-size: 1rem;
-                            padding: 0.5rem 0;
-                        };
-                    }
-
-                }
             }
     
             @include sizeDesktop {
                 max-width: 1200px;
+                grid-template-columns: 1fr 1fr 1fr;
 
                 //change place!
                 img {
