--- a/src/Assets/Styles/_header.scss
+++ b/src/Assets/Styles/_header.scss
@@ -51,6 +51,81 @@ header {
                     display: none;
                 }
 
+                .floatingMenu {
+                    display: block;
+                    position: fixed;
+                    //right: 0;
+                    left: 0;
+                    top: 4rem;
+                    height: 100vh;
+                    width: 100%;
+                    //padding: 1rem 2rem;
+                    background-color: rgba($color-bg-dark, 0.99);
+                    border-radius: 0 0 0 16px;
+                    opacity: 1;
+                    visibility: visible;
+                    transition: height 0.4s, opacity 0.4s, visibility 0.4s;
+
+                    ul {
+                        padding-top: 5rem;
+                        font-size: 2rem;
+                        text-align: center;
+                        margin: 0 auto;
+                        max-width: 200px;
+                        justify-content: center;
+                    }
+
+                    .headerMenu a {
+                        font-size: 2rem;
+                    }
+
+                    @include sizeTablet {
+                        top: 4rem;
+                        position: absolute;
+                        left: auto;
+                        right: 0;
+                        height: auto;
+                        width: fit-content;
+                        padding: 1rem 2rem;
+
+                        .headerMenu a {
+                            font-size: 1.5rem;
+                        }
+
+                        ul {
+                            padding-top: 0;
+                            
+                            a {
+                                font-size: 1.2rem;
+                            }
+                        }
+                    }
+
+
+                    .headerMenu ul {
+                        padding-top: 1rem;
+                        display: flex;
+                        flex-flow: row wrap;
+                        gap: 1rem;
+
+                        li {
+                            padding: 0 0 0.4rem 0;
+                            flex-basis: 45%;
+                        }
+                    }
+                
+                    ul li {
+                        list-style-type: none;
+                        padding: 0.2rem 0;
+                    }
+                }
+
+                .floatingMenu.hidden {
+                    opacity: 0;
+                    visibility: hidden;
+                }
+
+                
 
                 @include sizeDesktop {
 
