Adds routes and per project page

--- a/src/Assets/Styles/_body.scss
+++ b/src/Assets/Styles/_body.scss
@@ -63,7 +63,7 @@ section, .aboutMe {
                     display: flex;
                     flex-flow: column nowrap;
 
-                    .readMore {
+                    .customButton {
                         align-self: center;
                         width: 100%;
                         font-size: 1rem;
