Restyles Hero a bit

--- a/src/Assets/Styles/_body.scss
+++ b/src/Assets/Styles/_body.scss
@@ -10,6 +10,44 @@ section, .aboutMe {
     }
 }
 
+.skills {
+
+    .skillsList {
+        display: flex;
+        flex-flow: row wrap;
+        justify-content: space-around;
+        max-width: 1200px;
+        margin: auto;
+        gap: 2rem;
+
+        li {
+            width: 120px;
+            display: flex;
+            flex-flow: row wrap;
+            align-items: flex-end;
+            justify-content: center;
+            list-style-type: none;
+            gap: 0.5rem;
+            padding: 0 1rem;            
+            
+            p {
+                display: flex;
+                justify-content: center;
+                font-size: 3rem;
+                
+                img {
+                    border-radius: 0.5rem;
+                }
+            }
+
+            .name {
+                font-size: 0.6rem;
+                align-self: flex-end;
+            }
+        }
+    }
+}
+
 .projectsWrapper {
     background-color: $color-bg-lighter;
 
