--- a/src/Assets/Styles/_projects.scss
+++ b/src/Assets/Styles/_projects.scss
@@ -26,7 +26,7 @@
 
         * {
             margin: auto;
-            text-align: center;
+            text-align: left;
             max-width: 500px;
         }
     }
