--- a/src/Assets/Styles/_typography.scss
+++ b/src/Assets/Styles/_typography.scss
@@ -47,6 +47,28 @@ a.customButton {
     background-color: $color-accent;
     border-radius: 6px;
     padding: 0.25rem 0.6rem;
+    transition: color 0.25s;
+
+    &:hover {
+        color: rgb(152, 201, 230);
+        transition: color 0.25s;
+    }
+}
+
+a.disabledButtom {
+    font-family: $font-sans;
+
+    text-align: center;
+    padding: 0.25rem 0.5rem;
+    font-size: 1.25rem;
+    border: none;
+
+    color: $color-main-light;
+
+    background-color: rgba($color-accent, 0.5);
+    border-radius: 6px;
+    padding: 0.25rem 0.6rem;
+    pointer-events: none;
 }
 
 .hidden {
