--- a/src/Assets/Styles/_body.scss
+++ b/src/Assets/Styles/_body.scss
@@ -18,7 +18,11 @@ section, .aboutMe {
         justify-content: space-around;
         max-width: 1200px;
         margin: auto;
-        gap: 2rem;
+        gap: 1rem;
+
+        @include sizeDesktop {
+            gap: 2rem;
+        }
 
         li {
             width: 120px;
@@ -28,7 +32,11 @@ section, .aboutMe {
             justify-content: center;
             list-style-type: none;
             gap: 0.5rem;
-            padding: 0 1rem;            
+            padding: 0.75rem 0.25rem;   
+            
+            @include sizeDesktop {
+                padding: 0 0.25rem;
+            }
             
             p {
                 display: flex;
