--- a/src/Assets/Styles/_projects.scss
+++ b/src/Assets/Styles/_projects.scss
@@ -65,4 +65,32 @@
             max-width: 400px;
         }
     }
+
+    .expandedGallery {
+        top: 0;
+        left: 0;
+        margin: auto;
+        padding-top: 4rem;
+        position: fixed;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0,0,0,0.75);
+
+        img {
+            z-index: 10;
+            display: block;
+            padding: 2rem 5rem 0 5rem;
+            margin: auto;
+            max-height: 75vh;
+        }
+
+        .description {
+            color: white;
+            margin: 0.5rem auto;
+            width: fit-content;
+            padding: 1rem 2rem;
+            border-radius: 1rem;
+            background-color: rgba(0,0,0,0.9);
+        }
+    }
 }
