--- a/src/Assets/Styles/_header.scss
+++ b/src/Assets/Styles/_header.scss
@@ -276,6 +276,11 @@ header {
                 color: white;
             }
     
+            .biggest {
+                font-size: 2rem;
+                font-weight: 600;
+            }
+
             .bigger {
                 font-size: 1.5rem;
                 font-weight: 600;
