--- a/src/Assets/Styles/_navigation.scss
+++ b/src/Assets/Styles/_navigation.scss
@@ -33,7 +33,6 @@
     .upperList {
         display: block;
 
-
         @include sizeDesktop {
             max-width: 1200px;
             margin: 0 auto;
@@ -43,10 +42,11 @@
             align-items: center;
         }
 
-        .phone, .mail, .contactSocial {
+        .phone, .mail, .contactSocial, .address {
             flex-basis: 45%;
             list-style-type: none;
             min-width: 100px;
+            margin: 0.75rem 0 0 0;
 
             a {
                 display: flex;
@@ -61,6 +61,19 @@
                     @include sizeTablet {
                         font-size: 1.25rem;
                     }
+                }
+            }
+
+            p {
+                display: flex;
+                flex-flow: row nowrap;
+                justify-content: center;
+                align-items: center;
+                gap: 1rem;
+                font-size: 1rem;
+
+                @include sizeTablet {
+                    font-size: 1.25rem;
                 }
             }
         }
@@ -82,7 +95,7 @@
                     align-items: center;
                     gap: 2rem;
                     padding: 0;
-                    margin: 1rem 0;
+                    //margin: 1rem 0;
 
                     li {
                         list-style-type: none;
