--- a/src/Assets/Styles/_body.scss
+++ b/src/Assets/Styles/_body.scss
@@ -1,8 +1,6 @@
-section, .aboutMe {
-    padding: 3rem 1rem 4rem 1rem;
-}
-
 .aboutMe {
+    padding: 4rem 1rem 0rem 1rem;
+
     p {
         margin: 0 auto;
         max-width: 800px;
@@ -11,6 +9,7 @@ section, .aboutMe {
 }
 
 .skills {
+    padding: 3rem 1rem 4rem 1rem;
 
     .skillsList {
         display: flex;
@@ -57,6 +56,7 @@ section, .aboutMe {
 }
 
 .projectsWrapper {
+    padding: 4rem 1rem;
     background-color: $color-bg-lighter;
 
     .projects {
